@@ -62,7 +62,7 @@ esac &&
 $GREP -q -- "^test.example.com..*86400.*IN.*NS.*ns2.example.com." "$INSTALL_ROOT/var/opendnssec/signed/example.com" &&
 $GREP -q -- "^test1.test.example.com..*86400.*IN.*NS.*ns2.example.com." "$INSTALL_ROOT/var/opendnssec/signed/example.com" &&
 
-#OPENDSNSEC-290 - Update the zone by changing a CNAME record to an A record. 
+#OPENDSNSEC-290 - Update the zone by changing a CNAME record to an A record.
 ods_setup_zone test/all.rr.org &&
 log_this_timeout ods-update-zone 10 ods-signer sign all.rr.org &&
 
@@ -72,19 +72,15 @@ test -f "$INSTALL_ROOT/var/opendnssec/signed/all.rr.org" &&
 #OPENDNSSEC-247 - Update the SOA minimum in the policy and make sure the NSEC TTL changes.
 $GREP -q -- "<Minimum>PT300S</Minimum>" "$INSTALL_ROOT/var/opendnssec/signconf/all.rr.org" &&
 $GREP -q -- "300.*IN.*NSEC3" "$INSTALL_ROOT/var/opendnssec/signed/all.rr.org" &&
-mv kasp.xml kasp.xml_orig &&
+cp kasp.xml kasp.xml_orig &&
 cp test/kasp.xml kasp.xml &&
 log_this ods-update-policy ods_setup_conf kasp.xml &&
 log_this_timeout ods-update-policy 10 ods-ksmutil update kasp &&
 syslog_waitfor 60 'ods-enforcerd: .*Called signer engine:.*ods-signer update all.rr.org' &&
 $GREP -q -- "<Minimum>PT600S</Minimum>" "$INSTALL_ROOT/var/opendnssec/signconf/all.rr.org" &&
-# SAD -> MM: This is only logged when using SQLite...
-#syslog_waitfor 60 'ods-signerd: .*zone all.rr.org set soa ttl to 600' &&
-
 syslog_waitfor_count 60 3 'ods-signerd: .*\[STATS\] all.rr.org' &&
 test -f "$INSTALL_ROOT/var/opendnssec/signed/all.rr.org" &&
-# SAD -> MM: This check fails...
-#$GREP -q -- "600.*IN.*NSEC3" "$INSTALL_ROOT/var/opendnssec/signed/all.rr.org" &&
+$GREP -q -- "600.*IN.*NSEC3" "$INSTALL_ROOT/var/opendnssec/signed/all.rr.org" &&
 
 #########################################################################
 
@@ -92,12 +88,12 @@ log_this_timeout ods-control-start 60 ods-control stop &&
 syslog_waitfor 60 'ods-enforcerd: .*all done' &&
 syslog_waitfor 60 'ods-signerd: .*\[engine\] signer shutdown' &&
 
-mv kasp.xml_orig kasp.xml &&
+cp kasp.xml_orig kasp.xml &&
 return 0
 
 echo '*********** ERROR **********'
 ods_kill
-mv kasp.xml_orig kasp.xml
+cp kasp.xml_orig kasp.xml
 return 1
 
 
