@@ -3,6 +3,9 @@ $Id$
 
 OpenDNSSEC 1.4.1
 
+* OPENDNSSEC-247: Signer Engine: TTL on NSEC3 was not updated on SOA
+  Minimum change.
+
 
 OpenDNSSEC 1.4.0 - 2013-04-22
 
